--- a/busc16.vcxproj
+++ b/busc16.vcxproj
@@ -80,11 +80,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="src\ccr.c" />
+    <ClCompile Include="src\ir.c" />
     <ClCompile Include="src\memory.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\ccr.h" />
     <ClInclude Include="include\config.h" />
+    <ClInclude Include="include\ir.h" />
     <ClInclude Include="include\memory.h" />
+    <ClInclude Include="include\uc.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
